--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -5,45 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="Search Task" Width="550" Height="750" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <StackPanel>
-        <Label Content="Search Parameters:" Height="30" />
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="4*" />
-            </Grid.ColumnDefinitions>
-            <Label Height="30">
-                <RadioButton x:Name="classicSearchRadioButton" Content="Classic Search" GroupName="SearchType" />
-            </Label>
-            <Label Height="30" Grid.Column="1">
-                <RadioButton x:Name="modernSearchRadioButton" Content="Modern Search" GroupName="SearchType" IsEnabled="false" />
-            </Label>
-        </Grid>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="5*" />
-            </Grid.ColumnDefinitions>
-            <StackPanel Margin="5">
-                <CheckBox x:Name="conserveMemoryCheckBox" Content="Conserve memory in classic search (might be slow)" />
-                <CheckBox x:Name="checkBoxDecoy" Content="Generate Decoys" />
-                <CheckBox x:Name="checkBoxParsimony" Content="Aggregate Proteins" />
-                <CheckBox x:Name="checkBoxHistogramAnalysis" Content="Do Histogram Analysis" />
-                <CheckBox x:Name="checkBoxQuantification" Content="Quantify peptides" />
-            </StackPanel>
-            <StackPanel Margin="0,20,0,0" VerticalAlignment="Top"  Grid.Column="1">
-                <CheckBox x:Name="checkBoxNoOneHitWonders" Content="Require at least two peptides to identify protein" Margin="0,0,0,0" VerticalAlignment="Top" Height="16" IsEnabled="{Binding IsChecked, ElementName=checkBoxParsimony}" />
-                <StackPanel Orientation="Horizontal" Margin="-4,8,0,0">
-                    <Label x:Name="quantRtLabel" Content="RT Window (min)" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
-                    <TextBox x:Name="quantRtTolerance"  Width="30" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
-                    <Label x:Name="quantPpmLabel" Content="Tolerance (ppm)" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
-                    <TextBox x:Name="quantPpmTolerance"  Width="30" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
-                </StackPanel>
-            </StackPanel>
-        </Grid>
-        <GroupBox Header="Allowed Precursor Mass Differences">
-            <Expander x:Name="ApmdExpander" Collapsed="ApmdExpander_Collapsed">
+        Title="Search Task" Width="550" Height="750" WindowStartupLocation="CenterScreen">
+    <DockPanel>
+        <CheckBox x:Name="checkBoxDecoy" Content="Generate decoy proteins" Margin="5" DockPanel.Dock="Top"/>
+        <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
+            <Expander x:Name="SearchModeExpander" Collapsed="ApmdExpander_Collapsed">
                 <Expander.Style>
                     <Style TargetType="Expander">
                         <Setter Property="Header" Value="{Binding ExpanderTitle}"/>
@@ -54,65 +20,172 @@
                         </Style.Triggers>
                     </Style>
                 </Expander.Style>
-                <StackPanel Margin="5">
-                    <DataGrid x:Name="searchModesDataGrid" ItemsSource="{Binding}" CanUserSortColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" Height="150" SelectionMode="Single" />
-                    <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBox x:Name="newAllowedPrecursorMassDiffsTextBox"  Width="300" />
-                        <Button x:Name="addNewAllowedPrecursorMassDiffsButton" Content="Add New Allowed Precursor Mass Diffs" Click="AddNewAllowedPrecursorMassDiffsButton_Click" />
-                    </StackPanel>
+                <StackPanel>
+                    <GroupBox Header="Search Mode">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0">
+                                <RadioButton x:Name="classicSearchRadioButton" Content="Classic Search" GroupName="SearchType"/>
+                                <CheckBox x:Name="conserveMemoryCheckBox" Content="Conserve memory (might be slow)"  IsEnabled="{Binding IsChecked, ElementName=classicSearchRadioButton}" />
+                            </StackPanel>
+                            <StackPanel Grid.Column="1">
+                                <RadioButton x:Name="modernSearchRadioButton" Content="Modern Search" GroupName="SearchType" Visibility="Hidden"/>
+                            </StackPanel>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="In-Silico Digestion Parameters">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <Label x:Name="label1" Content="Max Missed Cleavages" />
+                                    <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <Label x:Name="label_Copy" Content="Protease" />
+                                    <ComboBox x:Name="proteaseComboBox" />
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1">
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <Label x:Name="label1_Copy" Content="Initiator Methionine" />
+                                    <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
+                                    <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
+                                </StackPanel>
+                            </StackPanel>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="Fragment Ion Search Parameters">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*" />
+                                <ColumnDefinition Width="1*" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                                    <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                                    <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1">
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <Label x:Name="label4" Content="Ions to search" />
+                                    <CheckBox x:Name="bCheckBox" Content="b ions" />
+                                    <CheckBox x:Name="yCheckBox" Content="y ions" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
+                                    <CheckBox x:Name="cCheckBox" Content="c ions" />
+                                    <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
+                                </StackPanel>
+                            </StackPanel>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="Allowed Precursor Mass Differences">
+                        <Expander x:Name="ApmdExpander" Collapsed="ApmdExpander_Collapsed">
+                            <Expander.Style>
+                                <Style TargetType="Expander">
+                                    <Setter Property="Header" Value="{Binding ExpanderTitle}"/>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsExpanded" Value="True">
+                                            <Setter Property="Header" Value="Hide"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Expander.Style>
+                            <StackPanel Margin="5">
+                                <DataGrid x:Name="searchModesDataGrid" ItemsSource="{Binding}" CanUserSortColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" Height="150" SelectionMode="Single" />
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <TextBox x:Name="newAllowedPrecursorMassDiffsTextBox"  Width="300" />
+                                    <Button x:Name="addNewAllowedPrecursorMassDiffsButton" Content="Add New Allowed Precursor Mass Diffs" Click="AddNewAllowedPrecursorMassDiffsButton_Click" />
+                                </StackPanel>
+
+                            </StackPanel>
+                        </Expander>
+                    </GroupBox>
                 </StackPanel>
             </Expander>
         </GroupBox>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-            <StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label1" Content="Max Missed Cleavages" />
-                    <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
+        <GroupBox Header="Post-Search Analysis" DockPanel.Dock="Top">
+            <Expander x:Name="AnalysisExpander" Collapsed="ApmdExpander_Collapsed">
+                <Expander.Style>
+                    <Style TargetType="Expander">
+                        <Setter Property="Header" Value="{Binding ExpanderTitle}"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsExpanded" Value="True">
+                                <Setter Property="Header" Value="Hide"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Expander.Style>
+                <StackPanel>
+                    <GroupBox Header="Protein Parsimony">
+                        <StackPanel>
+                            <CheckBox x:Name="checkBoxParsimony" Content="Aggregate Proteins" />
+                            <CheckBox x:Name="checkBoxNoOneHitWonders" Content="Require at least two peptides to identify protein" Margin="0,0,0,0" VerticalAlignment="Top" Height="16" IsEnabled="{Binding IsChecked, ElementName=checkBoxParsimony}" />
+                        </StackPanel>
+                    </GroupBox>
+                    <GroupBox Header="Quantification">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="5*" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Margin="5">
+                                <CheckBox x:Name="checkBoxQuantification" Content="Quantify peptides" />
+                            </StackPanel>
+                            <StackPanel Margin="0,20,0,0" VerticalAlignment="Top"  Grid.Column="1">
+                                <StackPanel Orientation="Horizontal" Margin="-4,8,0,0">
+                                    <Label x:Name="quantRtLabel" Content="RT Window (min)" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
+                                    <TextBox x:Name="quantRtTolerance"  Width="30" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
+                                    <Label x:Name="quantPpmLabel" Content="Tolerance (ppm)" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
+                                    <TextBox x:Name="quantPpmTolerance"  Width="30" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
+                                </StackPanel>
+                            </StackPanel>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="Mass Shift Histogram Analysis">
+                        <CheckBox x:Name="checkBoxHistogramAnalysis" Content="Do Histogram Analysis" />
+                    </GroupBox>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label_Copy" Content="Protease" />
-                    <ComboBox x:Name="proteaseComboBox" />
+            </Expander>
+        </GroupBox>
+        <GroupBox Header="Modifications" DockPanel.Dock="Top">
+            <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded">
+                <Expander.Style>
+                    <Style TargetType="Expander">
+                        <Setter Property="Header" Value="{Binding ExpanderTitle}"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsExpanded" Value="True">
+                                <Setter Property="Header" Value="Hide"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Expander.Style>
+                <StackPanel>
+                    <DataGrid x:Name="modificationsDataGrid" ItemsSource="{Binding}" CanUserSortColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" Height="250" SelectionMode="Single" Loaded="modificationsDataGrid_Loaded" DataContextChanged="modificationsDataGrid_DataContextChanged" AutoGeneratedColumns="modificationsDataGrid_AutoGeneratedColumns">
+                        <DataGrid.Resources>
+                            <Style TargetType="DataGridCell">
+                                <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick" />
+                            </Style>
+                        </DataGrid.Resources>
+                    </DataGrid>
+                    <CheckBox x:Name="writePrunedDatabaseCheckBox" Content="WritePrunedDatabase" Checked="writePrunedDatabaseCheckBox_Checked" Unchecked="writePrunedDatabaseCheckBox_Unchecked" />
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
-                    <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
-                </StackPanel>
-            </StackPanel>
-            <StackPanel Grid.Column="1">
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label1_Copy" Content="Initiator Methionine" />
-                    <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
-                    <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                    <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label4" Content="Ions to search" />
-                    <CheckBox x:Name="bCheckBox" Content="b ions" />
-                    <CheckBox x:Name="yCheckBox" Content="y ions" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
-                    <CheckBox x:Name="cCheckBox" Content="c ions" />
-                    <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
-                </StackPanel>
-            </StackPanel>
-        </Grid>
-        <DataGrid x:Name="modificationsDataGrid" ItemsSource="{Binding}" CanUserSortColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" Height="150" SelectionMode="Single">
-            <DataGrid.Resources>
-                <Style TargetType="DataGridCell">
-                    <EventSetter Event="MouseDoubleClick" Handler="Row_DoubleClick" />
-                </Style>
-            </DataGrid.Resources>
-        </DataGrid>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            </Expander>
+        </GroupBox>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" DockPanel.Dock="Bottom" Height="40">
             <Button x:Name="cancelButton" Content="Cancel" Click="CancelButton_Click" />
-            <Button x:Name="saveButton" Content="Save Search Task" Click="SaveButton_Click"  FontSize="24" Margin="10" />
+            <Button x:Name="saveButton" Content="Save Search Task" Click="SaveButton_Click" FontSize="24"/>
         </StackPanel>
-    </StackPanel>
+    </DockPanel>
 </Window>
