--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -5,61 +5,65 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="CalibrateTaskWindow" Width="550" Height="600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="CalibrateTaskWindow" Width="750" Height="750"  WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <StackPanel>
-        <Label Content="Search Parameters:" Height="30" />
-        <StackPanel Orientation="Horizontal" Margin="5">
-            <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
-            <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-            <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="5">
-            <Label x:Name="ff" Content="Max Degrees Of Parallelism" />
-            <TextBox x:Name="maxDegreesOfParallelism" Width="45" Text="-1"/>
-        </StackPanel>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-            <StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label1" Content="Max Missed Cleavages" />
-                    <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label_Copy" Content="Protease" />
-                    <ComboBox x:Name="proteaseComboBox" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
-                    <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
-                </StackPanel>
-            </StackPanel>
-            <StackPanel Grid.Column="1">
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label1_Copy" Content="Initiator Methionine" />
-                    <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
-                    <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                    <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+        <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
+            <Expander x:Name="SearchModeExpander" Collapsed="ApmdExpander_Collapsed">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
+                        <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                        <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
                     </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label4" Content="Ions to search" />
-                    <CheckBox x:Name="bCheckBox" Content="b ions" />
-                    <CheckBox x:Name="yCheckBox" Content="y ions" />
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Label x:Name="ff" Content="Max Degrees Of Parallelism" />
+                        <TextBox x:Name="maxDegreesOfParallelism" Width="45" Text="-1"/>
+                    </StackPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label1" Content="Max Missed Cleavages" />
+                                <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label_Copy" Content="Protease" />
+                                <ComboBox x:Name="proteaseComboBox" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
+                                <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
+                            </StackPanel>
+                        </StackPanel>
+                        <StackPanel Grid.Column="1">
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label1_Copy" Content="Initiator Methionine" />
+                                <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                                <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                                <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label4" Content="Ions to search" />
+                                <CheckBox x:Name="bCheckBox" Content="b ions" />
+                                <CheckBox x:Name="yCheckBox" Content="y ions" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
+                                <CheckBox x:Name="cCheckBox" Content="c ions" />
+                                <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
-                    <CheckBox x:Name="cCheckBox" Content="c ions" />
-                    <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
-                </StackPanel>
-            </StackPanel>
-        </Grid>
-
+            </Expander>
+            </GroupBox>
         <GroupBox Header="Modifications" DockPanel.Dock="Top">
-            <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded" IsExpanded="True">
+            <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded">
                 <Expander.Style>
                     <Style TargetType="Expander">
                         <Setter Property="Header" Value="{Binding ModExpanderTitle}"/>
