--- a/GUI/GPTMDTaskWindow.xaml
+++ b/GUI/GPTMDTaskWindow.xaml
@@ -5,58 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="GPTMDTaskWindow" Width="550" Height="600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="GPTMDTaskWindow" Width="750" Height="750" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <StackPanel>
-        <Label Content="Search Parameters:" Height="30" />
-        <StackPanel Orientation="Horizontal" Margin="5">
-            <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
-            <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-            <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
-            <Label x:Name="databaseReferencesLabel" Content="Database References to Keep" ToolTip="Comma separated list of database references to keep from an XML protein database, e.g. ref,ref,..."/>
-            <TextBox x:Name="databaseReferencesTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="100" Height="24" />
-        </StackPanel>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-            <StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label1" Content="Max Missed Cleavages" />
-                    <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
+        <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
+            <Expander x:Name="SearchModeExpander" Collapsed="ApmdExpander_Collapsed">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <Label x:Name="precursorMassToleranceLabel" Content="Precursor Mass Tolerance" />
+                        <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                        <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
+                        <Label x:Name="databaseReferencesLabel" Content="Database References to Keep" ToolTip="Comma separated list of database references to keep from an XML protein database, e.g. ref,ref,..."/>
+                        <TextBox x:Name="databaseReferencesTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="100" Height="24" />
+                    </StackPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label1" Content="Max Missed Cleavages" />
+                                <TextBox x:Name="missedCleavagesTextBox"  Width="45" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label_Copy" Content="Protease" />
+                                <ComboBox x:Name="proteaseComboBox" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
+                                <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
+                            </StackPanel>
+                        </StackPanel>
+                        <StackPanel Grid.Column="1">
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label1_Copy" Content="Initiator Methionine" />
+                                <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
+                                <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
+                                <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <Label x:Name="label4" Content="Ions to search" />
+                                <CheckBox x:Name="bCheckBox" Content="b ions" />
+                                <CheckBox x:Name="yCheckBox" Content="y ions" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
+                                <CheckBox x:Name="cCheckBox" Content="c ions" />
+                                <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
                 </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label_Copy" Content="Protease" />
-                    <ComboBox x:Name="proteaseComboBox" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
-                    <TextBox x:Name="maxModificationIsoformsTextBox" Width="45" />
-                </StackPanel>
-            </StackPanel>
-            <StackPanel Grid.Column="1">
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label1_Copy" Content="Initiator Methionine" />
-                    <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
-                    <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
-                    <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="5">
-                    <Label x:Name="label4" Content="Ions to search" />
-                    <CheckBox x:Name="bCheckBox" Content="b ions" />
-                    <CheckBox x:Name="yCheckBox" Content="y ions" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Margin="89,10,-69,10">
-                    <CheckBox x:Name="cCheckBox" Content="c ions" />
-                    <CheckBox x:Name="zdotCheckBox" Content="zdot ions" />
-                </StackPanel>
-            </StackPanel>
-        </Grid>
+            </Expander>
+        </GroupBox>
         <GroupBox Header="Modifications" DockPanel.Dock="Top">
-            <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded" IsExpanded="True">
+            <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed" Expanded="ModExpander_Expanded" IsExpanded="False">
                 <Expander.Style>
                     <Style TargetType="Expander">
                         <Setter Property="Header" Value="{Binding ModExpanderTitle}"/>
@@ -146,7 +151,25 @@
                 </StackPanel>
             </Expander>
         </GroupBox>
-        <GroupBox Header="G-PTM-D Settings" DockPanel.Dock="Top">
+        <GroupBox Header="G-PTM-D Modifications" DockPanel.Dock="Top">
+            <Expander>
+            <TreeView x:Name="gptmdModsTreeView" ItemsSource="{Binding}" Height="400">
+                <TreeView.Resources>
+                    <HierarchicalDataTemplate DataType="{x:Type local:ModTypeForTreeView}" ItemsSource="{Binding Children}">
+                        <StackPanel Orientation="Horizontal" Background="{Binding Background}">
+                            <CheckBox x:Name="checkBoxHistogramAnalysis" IsChecked="{Binding Use}"/>
+                            <TextBlock Text="{Binding DisplayName}" />
+                        </StackPanel>
+                    </HierarchicalDataTemplate>
+                    <DataTemplate DataType="{x:Type local:ModForTreeView}">
+                        <StackPanel Orientation="Horizontal" Background="{Binding Background}" ToolTip="{Binding ToolTipStuff}">
+                            <CheckBox x:Name="checkBoxHistogramAnalysis" IsChecked="{Binding Use}"/>
+                            <TextBlock Text="{Binding DisplayName}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </TreeView.Resources>
+            </TreeView>
+            </Expander>
         </GroupBox>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button x:Name="cancelButton" Content="Cancel" Click="CancelButton_Click" />
