Add ScrollViewer in GUI task

--- a/GUI/CalibrateTaskWindow.xaml
+++ b/GUI/CalibrateTaskWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
         Title="CalibrateTaskWindow" Width="750" Height="750"  WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <StackPanel>
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <StackPanel>
         <GroupBox Header="Search Parameters" DockPanel.Dock="Top">
             <Expander x:Name="SearchModeExpander" Collapsed="ApmdExpander_Collapsed">
                 <StackPanel>
@@ -171,4 +172,5 @@
             <Button x:Name="saveButton" Content="Save Calibrate Task" Click="saveButton_Click" FontSize="24" Margin="10" />
         </StackPanel>
     </StackPanel>
+    </ScrollViewer>
 </Window>
